<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">Cling</string>

    <integer name="fade_animation_duration">400</integer>

    <string name="menu_item_home">Дом</string>
    <string name="menu_item_cart">Корзина</string>
    <string name="menu_item_camera">Камера</string>
    <string name="menu_item_profile">Профиль</string>
    <string name="action_search">Поиск</string>
    <string name="action_settings">Настройки</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="next">Далее</string>
    <string name="buy"><b>Связаться</b></string>
    <string name="delete"><b>Удалить</b></string>
    <string name="add"><b>Добавить</b></string>
    <string name="ok">OK</string>
    <string name="ok_under"><u><b>OK</b></u></string>
    <string name="enter">Войти</string>
    <string name="enter_under"><u><b>Войти</b></u></string>
    <string name="change_settings"><u><b>Изменить</b></u></string>
    <string name="registration_under"><u><b>Регистрация</b></u></string>
    <string name="registration">Регистрация</string>
    <string name="f"><b>f</b></string>
    <string name="vk"><b>vk</b></string>
    <string name="t"><b>t</b></string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_address">Город</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_ok">ОК</string>
    <string name="hint_confirm">Подтвердить</string>
    <string name="hint_repeat_password">Повторите пароль</string>
    <string name="hint_product_title">Название товара</string>
    <string name="hint_product_price">Цена</string>
    <string name="hint_product_description">Описание товара</string>
    <string name="hint_search">Поиск</string>
    <string name="hint_confirm_code">Код подтверждения</string>
    <string name="hint_error_code">Неправильный код!</string>
    <string name="title_make_order">Buy</string>
    <string name="title_action_my_items">Мои товары</string>
    <string name="title_action_my_orders">Мои покупки</string>
    <string name="title_action_pass_change">Изменить пароль</string>
    <string name="title_action_feedback">Оценить</string>
    <string name="title_action_logout">Выйти</string>
    <string name="title_choose_image">Выберите изображение</string>
    <string name="title_item_adding">Добавление товара</string>
    <string name="title_or">или</string>
    <string name="char_star">*</string>

</resources>
