<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameEditText"
        style="@style/CyanEditText"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/surnameEditText"
        style="@style/CyanEditText"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_surname"
        android:inputType="text" />

    <EditText
        android:id="@+id/phoneEditText"
        style="@style/CyanEditText"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/CyanEditText"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/addressEditText"
        style="@style/CyanEditText"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_address"
        android:inputType="text" />

    <include
        layout="@layout/view_line"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_height="wrap_content" />

    <Button
        style="@style/ChangeButton"
        android:id="@+id/changeButton"
        android:text="@string/change_settings" />

</LinearLayout>