<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="@dimen/social_button_size"
        android:layout_height="@dimen/social_button_size"
        android:layout_margin="@dimen/social_button_padding"
        android:background="@drawable/selector_social"
        android:text="@string/f"
        android:textColor="@color/cyan" />

    <Button
        android:id="@+id/vkontakteButton"
        android:layout_width="@dimen/social_button_size"
        android:layout_height="@dimen/social_button_size"
        android:layout_margin="@dimen/social_button_padding"
        android:background="@drawable/selector_social"
        android:text="@string/vk"
        android:textColor="@color/cyan" />

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="@dimen/social_button_size"
        android:layout_height="@dimen/social_button_size"
        android:layout_margin="@dimen/social_button_padding"
        android:background="@drawable/selector_social"
        android:text="@string/t"
        android:textColor="@color/cyan" />

</LinearLayout>