<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>