<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="com.cling.cling.Fragments.ProfileFragment">

    <ImageView
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="10dp"
        android:background="@drawable/background_rounded_white"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_name"
        android:id="@+id/profileNameTextView"
        android:padding="5dp"
        android:background="@color/white"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_surname"
        android:id="@+id/profileSurnameTextView"
        android:layout_below="@+id/profileNameTextView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_phone"
        android:id="@+id/profilePhoneTextView"
        android:layout_below="@+id/profileSurnameTextView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        android:id="@+id/profileEmailTextView"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:padding="5dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_address"
        android:id="@+id/profileAddressTextView"
        android:layout_below="@+id/profileEmailTextView"
        android:layout_alignLeft="@+id/profileEmailTextView"
        android:layout_alignStart="@+id/profileEmailTextView"
        android:layout_alignRight="@+id/profilePhoneTextView"
        android:layout_alignEnd="@+id/profilePhoneTextView" />

    <include layout="@layout/view_line"
        android:id="@+id/includeProfileDivider"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileAddressTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileActionsListView"
        android:layout_below="@+id/includeProfileDivider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
