<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!--
    <EditText
        android:id="@+id/registrationNameEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_default" />

    <EditText
        android:id="@+id/registrationSurnameEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_surname"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_default"/>

    <EditText
        android:id="@+id/registrationEmailEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_default"/>

    <EditText
        android:id="@+id/registrationPhoneEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_default"/>

    <EditText
        android:id="@+id/registrationAddressEditText"
        style="@style/WhiteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_default"
        android:hint="@string/hint_address"
        android:inputType="textPostalAddress" />
    -->

    <EditText
        android:id="@+id/registrationEmailEditText"
        style="@style/CyanEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <include
        layout="@layout/view_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/registrationPasswordEditText"
        style="@style/CyanEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registrationRepeatPasswordEditText"
        style="@style/CyanEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registrationSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@android:color/transparent"
        android:text="@string/registration_under"
        android:textColor="@color/cyan"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>